.k8s/apps/domus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: domus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: domus
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 6f6aa9161ac0e2efa9e3fc2e328e2c6e1175dd51
    kubenix/module-instance: domus
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: domus
  namespace: apps
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: domus
      app.kubernetes.io/name: domus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: domus
        app.kubernetes.io/name: domus
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: RAILS_MAX_THREADS
              value: "8"
            - name: VIPS_CACHE_MAX
              value: "0"
            - name: VIPS_CACHE_MAX_MEM
              value: "0"
            - name: VIPS_CONCURRENCY
              value: "1"
            - name: MALLOC_ARENA_MAX
              value: "2"
            - name: S3_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  key: AWS_ACCESS_KEY_ID
                  name: domus-s3
            - name: S3_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  key: AWS_SECRET_ACCESS_KEY
                  name: domus-s3
          image: ghcr.io/josevictorferreira/domus:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /up
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 5
          name: main
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /up
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 256Mi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /up
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      imagePullSecrets:
        - name: ghcr-registry-secret
      serviceAccountName: default
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.165
    lbipam.cilium.io/sharing-key: domus
  labels:
    app.kubernetes.io/instance: domus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: domus
    app.kubernetes.io/service: domus
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 6f6aa9161ac0e2efa9e3fc2e328e2c6e1175dd51
    kubenix/module-instance: domus
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: domus
  namespace: apps
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: domus
    app.kubernetes.io/name: domus
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: domus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: domus
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 6f6aa9161ac0e2efa9e3fc2e328e2c6e1175dd51
    kubenix/module-instance: domus
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: domus
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: domus.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: domus
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - domus.josevictor.me
      secretName: wildcard-tls
